Change initiative section to prevent image distortion

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -36,9 +36,11 @@
 }
 .project-thumbnail {
   float: none;
-  height: auto;
-  max-height: 370px;
+  height: 370px;
   width: 100%;
+  max-height: 100%;
+  background-size: cover;
+  background-position: center;
 }
 
 .project-content{
